CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(BCD)

SET(TARGET_NAME BCD)

SET(BCD_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include"  CACHE STRING "bcd include dirs")

FILE(GLOB_RECURSE BCD_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/include/*.h"
		"${PROJECT_SOURCE_DIR}/include/*.hpp")
ADD_LIBRARY(${TARGET_NAME} STATIC ${BCD_SRC})

SET_PROPERTY(TARGET ${TARGET_NAME} PROPERTY FOLDER agz_dependencies)

FOREACH(_SRC IN ITEMS ${BCD_SRC})
    GET_FILENAME_COMPONENT(BCD_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/bcd" "include" _GRP_PATH "${BCD_SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET_PROPERTY(TARGET ${TARGET_NAME} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${TARGET_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PRIVATE ${EIGEN3_INCLUDE_DIRS} ${BCD_INCLUDE_DIRS}/bcd)
ADD_DEPENDENCIES(${TARGET_NAME} Eigen3)
