CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(TINY_OBJ_LOADER)

FILE(GLOB_RECURSE TINY_OBJ_LOADER_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cc"
		"${PROJECT_SOURCE_DIR}/src/*.h")
ADD_LIBRARY(TinyObjLoader STATIC ${TINY_OBJ_LOADER_SRC})

FOREACH(_SRC IN ITEMS ${TINY_OBJ_LOADER_SRC})
    GET_FILENAME_COMPONENT(TINY_OBJ_LOADER_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src/tiny_obj_loader" "src" _GRP_PATH "${TINY_OBJ_LOADER_SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
	SET_PROPERTY(TARGET TinyObjLoader PROPERTY "${CMAKE_CXX_FLAGS} -stdlib=libc++ -pthread	")
	SET_PROPERTY(TARGET TinyObjLoader PROPERTY "c++fs")
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
	SET_PROPERTY(TARGET TinyObjLoader PROPERTY "${CMAKE_CXX_FLAGS} -pthread")
	SET_PROPERTY(TARGET TinyObjLoader PROPERTY "stdc++fs")
ENDIF()

SET_PROPERTY(TARGET TinyObjLoader PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET TinyObjLoader PROPERTY CXX_STANDARD_REQUIRED ON)

SET(TinyObjLoader_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/src/")
SET(TinyObjLoader_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/src/" PARENT_SCOPE)

TARGET_INCLUDE_DIRECTORIES(TinyObjLoader PRIVATE ${TinyObjLoader_INCLUDE_DIRS})
