CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(OBJ_TO_SCENE)

FILE(GLOB_RECURSE OBJ_TO_SCENE_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/src/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/obj_to_scene/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/obj_to_scene/*.inl")
SET(OBJ_TO_SCENE_SRC ${OBJ_TO_SCENE_SRC})
ADD_EXECUTABLE(obj_to_scene ${OBJ_TO_SCENE_SRC})

FOREACH(_SRC IN ITEMS ${OBJ_TO_SCENE_SRC})
    GET_FILENAME_COMPONENT(OBJ_TO_SCENE_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/obj_to_scene" "obj_to_scene/include" _GRP_PATH "${OBJ_TO_SCENE_SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "obj_to_scene/src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET(OBJ_TO_SCENE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/")

TARGET_INCLUDE_DIRECTORIES(obj_to_scene PRIVATE ${MISC_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(obj_to_scene PRIVATE ${OBJ_TO_SCENE_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(obj_to_scene PRIVATE ${AGZUtils_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(obj_to_scene PRIVATE AGZUtils ${STDFS_LD_LIB})
