FILE(GLOB_RECURSE CORE_SRC "*.cpp" "*.h" "*.inl")
ADD_LIBRARY(Core STATIC ${CORE_SRC})
FOREACH(_SRC IN ITEMS ${CORE_SRC})
    GET_FILENAME_COMPONENT(CORE_SRC "${_SRC}" PATH)
    STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" _GRP_PATH "${CORE_SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()
