FILE(GLOB_RECURSE MGR_SRC "*.cpp" "*.h" "*.inl")
ADD_LIBRARY(Mgr STATIC ${MGR_SRC})
FOREACH(_SRC IN ITEMS ${MGR_SRC})
    GET_FILENAME_COMPONENT(MGR_SRC "${_SRC}" PATH)
    STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" _GRP_PATH "${MGR_SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()
