FILE(GLOB_RECURSE RHNN_VIEWER_SRC "*.cpp" "*.h"  "*.inl" "*.glsl")
ADD_EXECUTABLE(RHNNViewer ${RHNN_VIEWER_SRC})
FOREACH(_SRC IN ITEMS ${RHNN_VIEWER_SRC})
    GET_FILENAME_COMPONENT(RHNN_VIEWER_SRC "${_SRC}" PATH)
    STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" _GRP_PATH "${RHNN_VIEWER_SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

TARGET_INCLUDE_DIRECTORIES(RHNNViewer PRIVATE
	${GLEW_INCLUDE_DIRS}
	${glfw3_INCLUDE_DIRS}
	${OPENGL_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(RHNNViewer PRIVATE
	ImGui GLEW::GLEW glfw ${OPENGL_LIBRARIES}
	AGZUtils cnpy ${STDFS_LD_LIB})
