FILE(GLOB_RECURSE SH2D_SRC "*.cpp" "*.h")
ADD_EXECUTABLE(SH2D ${SH2D_SRC})
FOREACH(_SRC IN ITEMS ${SH2D_SRC})
    GET_FILENAME_COMPONENT(SH2D_SRC "${_SRC}" PATH)
    STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" _GRP_PATH "${SH2D_SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()
TARGET_INCLUDE_DIRECTORIES(SH2D PRIVATE)
TARGET_LINK_LIBRARIES(SH2D PRIVATE Mgr Core AGZUtils cnpy ${STDFS_LD_LIB})
