FILE(GLOB_RECURSE AGZUTILS_SRC "*.cpp" "../Utils/Src/*.h" "../Utils/Src/*.cpp" "../Utils/Src/*.inl")
ADD_LIBRARY(AGZUtils STATIC ${AGZUTILS_SRC})
FOREACH(_SRC IN ITEMS ${AGZUTILS_SRC})
    GET_FILENAME_COMPONENT(AGZUTILS_SRC "${_SRC}" PATH)
    STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/../Utils/Src/AGZUtils" "Header" _GRP_PATH_0 "${AGZUTILS_SRC}")
    STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "Impl" _GRP_PATH "${_GRP_PATH_0}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()
TARGET_INCLUDE_DIRECTORIES(AGZUtils PRIVATE
	${GLEW_INCLUDE_DIRS}
	${glfw3_INCLUDE_DIRS}
	${OPENGL_INCLUDE_DIRS})
	