CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(CLI)

FILE(GLOB_RECURSE CLI_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/src/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/cli/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/cli/*.inl")
ADD_EXECUTABLE(CLI ${CLI_SRC})

FOREACH(_SRC IN ITEMS ${CLI_SRC})
    GET_FILENAME_COMPONENT(CLI_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/cli" "cli/include" _GRP_PATH "${CLI_SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "cli/src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET(CLI_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/")

ADD_DEFINITIONS(-DAGZ_LOG_LEVEL=2)

TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${MISC_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${CLI_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${AGZUtils_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${Tracer_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(CLI ${Tracer_LIBRARIES} AGZUtils ${STDFS_LD_LIB} ${CLI_EMBREE_LIB} ${CLI_OIDN_LIB})
