CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(CLI)

FILE(GLOB_RECURSE CLI_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/src/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/cli/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/cli/*.inl")
ADD_EXECUTABLE(CLI ${CLI_SRC})

FOREACH(_SRC IN ITEMS ${CLI_SRC})
    GET_FILENAME_COMPONENT(CLI_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/cli" "cli/include" _GRP_PATH "${CLI_SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "cli/src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

TARGET_INCLUDE_DIRECTORIES(CLI PUBLIC "${PROJECT_SOURCE_DIR}/include")

TARGET_LINK_LIBRARIES(CLI Tracer AGZUtils ${STDFS_LD_LIB})
