CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(CLI_RAS)

FILE(GLOB_RECURSE CLI_RAS_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/src/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/cli_ras/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/cli_ras/*.inl")
SET(CLI_RAS_SRC ${CLI_RAS_SRC} ${RASTERIZER_SRC})
ADD_EXECUTABLE(CLI_RAS ${CLI_RAS_SRC})

FOREACH(_SRC IN ITEMS ${CLI_RAS_SRC})
    GET_FILENAME_COMPONENT(CLI_RAS_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/cli_ras" "cli_ras/include" _GRP_PATH "${CLI_RAS_SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "cli_ras/src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "${AGZCommon_SOURCE_DIR}/include/agz/common" "common/include" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "${AGZCommon_SOURCE_DIR}/src" "common/src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "${Rasterizer_PROJECT_DIR}/include/agz/rasterizer" "rasterizer/include" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "${Rasterizer_PROJECT_DIR}/src" "rasterizer/src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET(CLI_RAS_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/")

TARGET_INCLUDE_DIRECTORIES(CLI_RAS PRIVATE ${MISC_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(CLI_RAS PRIVATE ${CLI_RAS_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(CLI_RAS PRIVATE ${AGZUtils_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(CLI_RAS PRIVATE ${Rasterizer_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(CLI_RAS AGZUtils ${STDFS_LD_LIB})
