CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(MATERIAL_EXPLORER)

FILE(GLOB_RECURSE MaterialExplorer_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/src/*.h")
ADD_EXECUTABLE(MaterialExplorer ${MaterialExplorer_SRC})

FOREACH(_SRC IN ITEMS ${MaterialExplorer_SRC})
    GET_FILENAME_COMPONENT(MaterialExplorer_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${MaterialExplorer_SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET(MaterialExplorer_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/")

ADD_DEFINITIONS(-DAGZ_LOG_LEVEL=2)
ADD_DEFINITIONS(-DIMGUI_IMPL_OPENGL_LOADER_GLEW)

IF(MSVC)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${MISC_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${MaterialExplorer_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${AGZUtils_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${GLEW_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(MaterialExplorer OpenGL::GL AGZUtils ${STDFS_LD_LIB} glew_s glfw)
ADD_DEPENDENCIES(MaterialExplorer glew_s)
