CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(MATERIAL_EXPLORER)

FILE(GLOB_RECURSE MaterialExplorer_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/src/*.h")
ADD_EXECUTABLE(MaterialExplorer ${MaterialExplorer_SRC})

FOREACH(_SRC IN ITEMS ${MaterialExplorer_SRC})
    GET_FILENAME_COMPONENT(MaterialExplorer_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${MaterialExplorer_SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    TARGET_COMPILE_OPTIONS(MaterialExplorer PUBLIC -stdlib=libc++)
ENDIF()

SET_PROPERTY(TARGET MaterialExplorer PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET MaterialExplorer PROPERTY CXX_STANDARD_REQUIRED ON)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
		SET(STDFS_LD_LIB "c++fs")
	ENDIF()
    SET(LINKER_FLAGS "-ldl -pthread -stdlib=libc++")
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET(STDFS_LD_LIB "stdc++fs")
    SET(LINKER_FLAGS "-ldl -pthread")
ENDIF()

TARGET_COMPILE_DEFINITIONS(MaterialExplorer PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLEW)

IF(MSVC)
	TARGET_COMPILE_DEFINITIONS(MaterialExplorer PUBLIC _CRT_SECURE_NO_WARNINGS)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${MISC_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE "${PROJECT_SOURCE_DIR}/include/")
TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${GLEW_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(MaterialExplorer OpenGL::GL AGZUtils ${STDFS_LD_LIB} glew_s glfw ${LINKER_FLAGS})
