CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(MATERIAL_EXPLORER)

FILE(GLOB_RECURSE MaterialExplorer_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/src/*.h")
ADD_EXECUTABLE(MaterialExplorer ${MaterialExplorer_SRC})

FOREACH(_SRC IN ITEMS ${MaterialExplorer_SRC})
    GET_FILENAME_COMPONENT(MaterialExplorer_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${MaterialExplorer_SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET_PROPERTY(TARGET MaterialExplorer PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET MaterialExplorer PROPERTY CXX_STANDARD_REQUIRED ON)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
		SET(LINKER_FLAGS "-lc++fs -ldl -pthread")
	ELSE()
		SET(LINKER_FLAG "-lstdc++fs -ldl -pthread")
	ENDIF()
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET(LINKER_FLAGS "-lstdc++fs -ldl -pthread")
ENDIF()

TARGET_COMPILE_DEFINITIONS(MaterialExplorer PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLEW)

IF(MSVC)
	TARGET_COMPILE_DEFINITIONS(MaterialExplorer PUBLIC _CRT_SECURE_NO_WARNINGS)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${MISC_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE "${PROJECT_SOURCE_DIR}/include/")
TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${GLEW_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(MaterialExplorer OpenGL::GL AGZUtils glew_s glfw ${LINKER_FLAGS})
