CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(TRACER)

FILE(GLOB_RECURSE TRACER_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/src/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/tracer/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/tracer/*.inl")

ADD_LIBRARY(Tracer STATIC ${TRACER_SRC})

FOREACH(_SRC IN ITEMS ${TRACER_SRC})
    GET_FILENAME_COMPONENT(TRACER_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/tracer" "include" _GRP_PATH "${TRACER_SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

ADD_DEFINITIONS(-DAGZ_LOG_LEVEL=2)

SET(Tracer_INCLUDE_DIRS
	"${PROJECT_SOURCE_DIR}/include/"
	"${AGZCommon_INCLUDE_DIRS}"
	"${AGZUtils_INCLUDE_DIRS}"
	"${MISC_INCLUDE_DIRS}"
	"${EMBREE_INCLUDE_DIRS}"
	CACHE STRING "")

IF(USE_EMBREE)
	ADD_DEPENDENCIES(Tracer Embree3)
	SET(Tracer_INCLUDE_DIRS ${Tracer_INCLUDE_DIRS} ${EMBREE_INCLUDE_DIRS})
	SET(Tracer_EMBREE_LIB  ${EMBREE_LIBRARIES})
ENDIF()

IF(USE_OIDN)
	SET(Tracer_OIDN_LIB OpenImageDenoise)
ENDIF()

SET(Tracer_INCLUDE_DIRS "${Tracer_INCLUDE_DIRS}" CACHE STRING "")

TARGET_INCLUDE_DIRECTORIES(Tracer PRIVATE ${Tracer_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(Tracer ${Tracer_OIDN_LIB})

SET(Tracer_LIBRARIES Tracer AGZUtils ${STDFS_LD_LIB} ${Tracer_OIDN_LIB} ${Tracer_EMBREE_LIB} CACHE STRING "")
