CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(TRACER_CSHADER)

FILE(GLOB_RECURSE TRACER_CSHADER_SRC
		"${PROJECT_SOURCE_DIR}/src/*cpp"
		"${PROJECT_SOURCE_DIR}/include/agz/tracer_cshader/*.h")
#SET(TRACER_CSHADER_SRC ${TRACER_CSHADER_SRC} ${TRACER_UTILITY_SRC})
SET(TRACER_CSHADER_SRC ${TRACER_CSHADER_SRC} ${TRACER_UTILITY_SRC} PARENT_SCOPE)
#ADD_LIBRARY(Tracer_CShader STATIC ${TRACER_CSHADER_SRC})

#FOREACH(_SRC IN ITEMS ${TRACER_CSHADER_SRC})
#    GET_FILENAME_COMPONENT(TRACER_CSHADER_SRC "${_SRC}" PATH)
#    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/tracer_cshader" "tracer_cshader/include" _GRP_PATH "${TRACER_CSHADER_SRC}")
#    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "tracer_cshader/src" _GRP_PATH "${_GRP_PATH}")
#    STRING(REPLACE "${Tracer_UTILITY_PROJECT_DIR}/include/agz/tracer_utility" "tracer_utility/include" _GRP_PATH "${_GRP_PATH}")
#    STRING(REPLACE "${Tracer_UTILITY_PROJECT_DIR}/src" "tracer_utility/src" _GRP_PATH "${_GRP_PATH}")
#    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
#    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
#ENDFOREACH()

SET(TRACER_CSHADER_PROJECT_DIR ${PROJECT_SOURCE_DIR} CACHE STRING "tracer c shader project directory")

SET(TRACER_CSHADER_INCLUDE_DIRS
		"${PROJECT_SOURCE_DIR}/include/"
		${MISC_INCLUDE_DIRS}
		${AGZUtils_INCLUDE_DIRS}
		${Tracer_UTILITY_INCLUDE_DIRS}
	CACHE STRING "tracer c shader include directories")

SET(TRACER_CSHADER_LIBRARIES
		AGZUtils
		${STDFS_LD_LIB}
	CACHE STRING "tracer c shader link libraries")

#TARGET_INCLUDE_DIRECTORIES(Tracer_CShader PRIVATE ${TRACER_CSHADER_INCLUDE_DIRS})
